[package]
name = "gh-summary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
humantime = "2.1.0"
octocrab = "0.42.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
