[package]
name = "gh-summary"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive", "env"] }
dotenvy = "0.15.7"
humantime = "2.2.0"
octocrab = "0.44.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
