[package]
name = "gh-summary"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive", "env"] }
dotenvy = "0.15.7"
http = "1.3.1"
humantime = "2.2.0"
octocrab = "0.44.1"
oo7 = "0.4.3"
regex = "1.11.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
